--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marriage Biodata Generator</title>
+    <title>Modern Marriage Biodata Generator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
-        <h1>Marriage Biodata Generator</h1>
+        <h1>Modern Marriage Biodata Generator</h1>
 
         <form id="biodataForm">
 
@@ -21,21 +21,38 @@
             <input type="text" id="dob" placeholder="Date of Birth (DD-MM-YYYY)">
             <input type="text" id="age" placeholder="Age">
             <input type="text" id="height" placeholder="Height (e.g., 5'8'')">
-            <input type="text" id="weight" placeholder="Weight (optional)">
+            <input type="text" id="weight" placeholder="Weight">
+            <input type="text" id="nationality" placeholder="Nationality">
             <input type="text" id="religion" placeholder="Religion">
-            <input type="text" id="caste" placeholder="Caste (optional)">
-            <input type="text" id="motherTongue" placeholder="Mother Tongue">
+            <input type="text" id="caste" placeholder="Caste">
+            <input type="text" id="rashi" placeholder="Rashi / Zodiac Sign">
+            <input type="text" id="languages" placeholder="Languages Known (comma separated)">
             <input type="text" id="job" placeholder="Profession / Job">
             <input type="text" id="education" placeholder="Education">
 
-            <h2>Family Details</h2>
-            <textarea id="familyDetails" placeholder="Family Details"></textarea>
+            <h2>About Me</h2>
+            <textarea id="aboutme" placeholder="Write about yourself..."></textarea>
 
-            <h2>Contact</h2>
-            <input type="text" id="phone" placeholder="Phone Number (comma separated)">
+            <h2>Family Background</h2>
+            <input type="text" id="fatherName" placeholder="Father's Name">
+            <input type="text" id="fatherJob" placeholder="Father's Profession">
+            <input type="text" id="motherName" placeholder="Mother's Name">
+            <input type="text" id="motherJob" placeholder="Mother's Profession">
+            <input type="text" id="brothers" placeholder="No. of Brothers">
+            <input type="text" id="sisters" placeholder="No. of Sisters">
+            <input type="text" id="familyType" placeholder="Family Type (Joint/Nuclear)">
+            <input type="text" id="socialClass" placeholder="Social Class (Middle / Upper Middle)">
+            <input type="text" id="residence" placeholder="Place of Residence">
+
+            <h2>Partner Preferences</h2>
+            <textarea id="partnerPref" placeholder="Describe your expectations & partner preferences..."></textarea>
+
+            <h2>Contact Details</h2>
+            <input type="text" id="phone" placeholder="Phone Number(s) – comma separated">
             <input type="text" id="email" placeholder="Email (must end with @gmail.com)">
+            <input type="text" id="address" placeholder="Residence Address">
 
-            <button type="button" onclick="generatePDF()">Generate Biodata PDF</button>
+            <button type="button" onclick="generatePDF()">Generate Stylish Biodata PDF</button>
         </form>
     </div>
 
