--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
         </div>
 
         <div class="hero-right slide-in-right">
-            <img src="https://i.ibb.co/5nKjJv6/biodata-stack.png" class="hero-img" />
+            <!-- FIXED IMAGE PATH -->
+            <img src="images/hero-wedding.jpg" class="hero-img" />
         </div>
     </section>
 
 </body>
 </html>
-
