--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="features">
-                ✔ 100% Free & Secure &nbsp;&nbsp; ✔ 50+ Templates &nbsp;&nbsp; ✔ Instant PDF
+                ✔ 100% Free & Secure &nbsp;&nbsp; ✔ Instant PDF Download
             </div>
         </div>
 
@@ -52,3 +52,4 @@
 
 </body>
 </html>
+
