--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 Choose a template, fill your details, and download your biodata instantly — no sign up required.
             </p>
 
-            <p class="counter"><span class="dot"></span> 1,982 biodatas created this week</p>
+            <p class="counter"><span class="dot"></span> 122+ biodatas created this week</p>
 
             <div class="btn-row">
                 <a href="biodata-form.html" class="btn-primary pulse">Create Your Biodata Now</a>
@@ -51,5 +51,6 @@
 
 </body>
 </html>
+
 
 
