--- a/biodata-form.html
+++ b/biodata-form.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,6 +10,7 @@
 </head>
 
 <body>
+<a href="index.html" class="home-btn">← Home</a>
 
 <div class="form-wrapper fade-in">
 
