--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="features">
-                ✔ 100% Free & Secure &nbsp;&nbsp; ✔ Instant PDF Download
+                ✔ 100% Free & Secure &nbsp;&nbsp; ✔ Instant PDF Download [created by Amit Kantikar]
             </div>
         </div>
 
@@ -51,6 +51,7 @@
 
 </body>
 </html>
+
 
 
 
