--- a/biodata-form.html
+++ b/biodata-form.html
@@ -1,52 +1,134 @@
 <!DOCTYPE html>
-
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Biodata</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="form.css">
+    <title>Biodata Form Builder</title>
+
+    <!-- TailwindCSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <style>
+        .field-box {
+            background: #f7f7f7;
+        }
+    </style>
 </head>
 
-<body>
-<a href="index.html" class="home-btn">← Home</a>
+<body class="bg-gray-100">
 
-<div class="form-wrapper fade-in">
+    <div class="max-w-4xl mx-auto p-6">
 
-    <h1>Create Your Marriage Biodata</h1>
+        <!-- SECTION -->
+        <div class="bg-white rounded-xl shadow p-6">
 
-    <div class="form-section">
-        <h2>Personal Details</h2>
-        <input id="fullName" placeholder="Full Name">
-        <input id="age" placeholder="Age">
-        <input id="dob" placeholder="Date of Birth (DD-MM-YYYY)">
-        <input id="height" placeholder="Height">
-        <input id="religion" placeholder="Religion">
-        <textarea id="aboutme" placeholder="About You"></textarea>
-        <input type="file" id="photo">
+            <!-- Header -->
+            <div class="flex items-center justify-between cursor-pointer mb-4">
+                <div class="flex items-center gap-3">
+                    <span class="text-2xl">🧍‍♂️</span>
+                    <div>
+                        <h2 class="text-xl font-bold text-gray-700">Personal Details</h2>
+                        <p class="text-gray-500 text-sm">This section has dynamic fields.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Fields Container -->
+            <div id="fieldContainer" class="space-y-5">
+            </div>
+
+            <!-- Add Field -->
+            <button onclick="addField()"
+                class="w-full mt-4 py-3 text-center text-blue-600 border border-blue-600 rounded-lg hover:bg-blue-50">
+                + Add Field
+            </button>
+
+        </div>
+
     </div>
 
-    <div class="form-section">
-        <h2>Family Background</h2>
-        <input id="fatherName" placeholder="Father's Name">
-        <input id="motherName" placeholder="Mother's Name">
-        <input id="siblings" placeholder="Siblings">
-    </div>
 
-    <div class="form-section">
-        <h2>Contact Details</h2>
-        <input id="phone" placeholder="Phone Number (10 digits)">
-        <input id="email" placeholder="Email (must end with @gmail.com)">
-        <input id="address" placeholder="Address">
-    </div>
+    <!-- JS -->
+    <script>
 
-    <button onclick="generatePDF()" class="btn-primary pulse">Download My Biodata</button>
+        // Create a field object
+        function createField(label = "New Field", placeholder = "Enter value") {
 
-</div>
+            const id = "fld_" + Math.random().toString(36).substr(2, 9);
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script src="script.js"></script>
+            return `
+            <div id="${id}" class="p-4 rounded-lg field-box relative">
+
+                <label class="font-medium text-gray-700">${label}</label>
+
+                <div class="relative mt-1">
+                    <input type="text" placeholder="${placeholder}"
+                        class="w-full px-4 py-2 rounded-md bg-white border focus:ring-2 focus:ring-blue-500">
+                    
+                    <span class="absolute right-3 top-3 cursor-pointer">✏️</span>
+                </div>
+
+                <div class="flex justify-end gap-3 mt-2">
+
+                    <button onclick="moveUp('${id}')" class="text-gray-600 text-xl">⬆</button>
+                    <button onclick="moveDown('${id}')" class="text-gray-600 text-xl">⬇</button>
+
+                    <button onclick="deleteField('${id}')" class="text-red-600 text-xl">🗑</button>
+
+                </div>
+
+            </div>`;
+        }
+
+        // Add field
+        function addField() {
+            document.getElementById("fieldContainer").insertAdjacentHTML("beforeend",
+                createField("Custom Field", "Enter value")
+            );
+        }
+
+        // Delete field
+        function deleteField(id) {
+            document.getElementById(id).remove();
+        }
+
+        // Move Up
+        function moveUp(id) {
+            const el = document.getElementById(id);
+            const prev = el.previousElementSibling;
+            if (prev) prev.before(el);
+        }
+
+        // Move Down
+        function moveDown(id) {
+            const el = document.getElementById(id);
+            const next = el.nextElementSibling;
+            if (next) next.after(el);
+        }
+
+        // Preload your exact fields
+        const defaultFields = [
+            ["Rashi", "Enter rashi"],
+            ["Nakshatra", "Enter nakshatra"],
+            ["Manglik", "Enter manglik"],
+            ["Religion", "Enter religion"],
+            ["Caste", "Enter caste"],
+            ["Gotra", "Enter gotra"],
+            ["Family Type", "Enter family type"],
+            ["Complexion", "Enter complexion"]
+        ];
+
+        window.onload = () => {
+            const container = document.getElementById("fieldContainer");
+
+            defaultFields.forEach(([label, ph]) => {
+                container.insertAdjacentHTML("beforeend", createField(label, ph));
+            });
+        };
+
+    </script>
 
 </body>
+
 </html>
